--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web演習6回目トレース</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <h1 class="large">工芸大サイトのトレース</h1>
-    <img src="i2124041.png" alt="サイトトレース">
+    <img src="i2124041.png" alt="サイトトレース" class="animate__animated animate__bounce">rubberBand>
 </body>
 </html>
