--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h1 class="large">工芸大サイトのトレース</h1>
-    <img src="i2124041.png" alt="サイトトレース" class="animate__animated animate__bounce">rubberBand>
+    <img src="i2124041.png" alt="サイトトレース" class="animate__animated animate__rubberBand">
 </body>
 </html>
